| Bug #28030 | test im_instance_conf fails with an assert | ||
|---|---|---|---|
| Submitted: | 23 Apr 2007 19:44 | Modified: | 2 Aug 2007 5:37 |
| Reporter: | Marc Alff | ||
| Status: | Closed | ||
| Category: | Instance Manager | Severity: | S1 (Critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Alexander Nozdrin | Target Version: | |
[27 Jul 2007 15:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/31702 ChangeSet@1.2561, 2007-07-27 17:39:01+04:00, anozdrin@ibm. +4 -0 Fix for BUG#28030: test im_instance_conf fails with an assert. The problem was a race condition on shutdown -- when IM got shutdown request while a guarded mysqld is starting. In this case the Guardian thread tried to stop the mysqld, but might fail if the mysqld hadn't created pid-file so far. When this happened, the mysqld-monitor thread didn't stop, so the assert in Thread_registry happened. The fix is to make several attempts to stop mysqld if it is active.
[27 Jul 2007 15:51]
Alexander Nozdrin
Pushed into 5.1-runtime.
[2 Aug 2007 1:26]
Bugs System
Pushed into 5.1.21-beta
[2 Aug 2007 5:37]
Paul DuBois
Noted in 5.1.21 changelog. Instance Manager had a race condition when it received a shutdown request while a guarded mysqld instance was starting such that it could fail to stop the mysqld instance.

Description: WARNING: 'mysqlmanager: thread_registry.cc:70: Thread_registry::~Thread_registry(): Assertion `head.next == &head' failed.' COUNT: 1 FILES: im.err TESTS: im_instance_conf The failure is random. Please note that this bug report is different from Bug#20294. How to repeat: N/A